...

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="15dp"
                    android:text="@string/profile"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/myProfile_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                        android:contentDescription="@string/image_next_cd"
                        android:src="@drawable/ic_arrow_right" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/changeLanguage_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

...
